--- a/index.html
+++ b/index.html
@@ -1,40 +1,38 @@
-
 <!DOCTYPE html>
-<html lang="#" dir="ltr">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta name='viewport' content='width=device-width' />
 
-  <title></title>
-</head>
-<body>
-  <h1 style="color: #bc3c7e; background-color: black">Dogs Become Valuable Employees at Bank</h1>
-  <p>It was revealed this morning that a major high street bank has <strong>begun employing clever canines</strong> to perform basic data-entry tasks in several of its UK data centres. In a statement earlier today a spokesperson for the bank said that training had gone well with the <strong>first intake of ten pooches</strong> and that overall they were just happy to be involved.</p>
-  <blockquote>
-    <p>"I've made new friends, we have a great canteen, and in a few months I'll have earned enough for a deposit on my own kennel"</p>
-    <footer>Larry the dog</footer>
-  </blockquote>
-  <h1 style="color: #bc3c7e;">Why did dogs decide to work in a bank?</h1>
-  <ol type ="I">
-  <li>Dogs are bored with lazy life.</li>
-  <li>They want to earn money for a vacation.</li>
-  <li>They want to feel like adults.</li>
+    <title></title>
+  </head>
+  <body>
+<div>
+      <h1 style="color: Yellow; background-color: pink">We Make Cakes</h1>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+    </div>
 
-<h2>Businesses Suited to Animal Employees</h2>
-<p>Many businesses could benefit from embracing our
-  feathered and furry friends in the workplace.</p>
+<div>
+ <div >
+  <h2>BIRTHDAY CAKES</h2>
+  <p>We make a classic birthday cake.</p>
+  <p>We prepare various sizes of cakes.</p>
+  <img style='max-width: 100%' src="IMG\birthday_cake.jpg" alt="Birthday Cake">
+ </div>
+<div>
+  <h2>Wedding Cakes</h2>
+  <p>Wedding cakes are the highlight of the party. We will prepare them for you according to your guidelines.</p>
+<p>We have a lot of experience in making cakes and many satisfied customers in our career.</p>
+<img style='max-width: 100%' src="IMG\wedding_cake.jpg" alt="Wedding Cake">
 
-  <h2>Cafes</h2>
-  <p>Perhaps you've been to a cat cafe already?
-    Relax with a coffee and be soothed by the elegant slow dance and soft purring of some feline friends.</p>
-
-<h2>Hospitals</h2>
-<p>Hospitals often have a need to move small things like sample tubes and paperwork to other parts of the
-  hospital quickly, often along long narrow corridors. Parrots would be perfectly suited to this role,
-  and would also help brighten things up, adding a little cheer for those enjoying a temporary stay.
-
-<h2>Window Cleaning</h2>
-</p>If window cleaners used Pelicans to hold their water,
-instead of carrying a bucket up a ladder, it's estimated that 356 window cleaning injuries a year could be avoided. They're also good company on a lunch break.</p>
-</body>
+</div>
+<div>
+  <p>Find out About
+    <a href="https://www.theknot.com/content/our-top-wedding-cake-tips">The Top Wedding Cake Tips</a>
+  </p>
+</div>
+ </div>
+  </body>
 </html>
